[gd_scene load_steps=15 format=3 uid="uid://ck2gyhhrb4h57"]

[ext_resource type="Script" path="res://avatars/monster/monster.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://mykhqd1mfgq4" path="res://avatars/monster/mesh/monster.glb" id="2"]
[ext_resource type="AudioStream" uid="uid://bhehjxdo7j6do" path="res://avatars/monster/sounds/step.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://bheq1cqjxucx" path="res://avatars/monster/sounds/swing.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://fy2ar1jett4x" path="res://avatars/monster/sounds/monster_roar.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://c7lnmrs7ob4v4" path="res://avatars/monster/sounds/monster_eat.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://myv54jcekk1a" path="res://avatars/monster/sounds/monster_smash.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://dc61s73jrakrw" path="res://avatars/monster/sounds/monster_die.wav" id="8"]

[sub_resource type="SphereShape3D" id="8"]
radius = 2.0

[sub_resource type="SphereShape3D" id="10"]
radius = 8.0

[sub_resource type="SphereShape3D" id="9"]
radius = 3.0

[sub_resource type="SphereShape3D" id="5"]
radius = 2.0

[sub_resource type="CapsuleShape3D" id="6"]
radius = 3.0
height = 6.0

[sub_resource type="CapsuleShape3D" id="11"]
radius = 2.0
height = 4.0

[node name="Monster" type="CharacterBody3D"]
collision_mask = 96
script = ExtResource("1")

[node name="Origin" parent="." instance=ExtResource("2")]

[node name="MonsterArmature" parent="Origin" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Origin/MonsterArmature" index="0"]
bones/0/position = Vector3(-2.83222e-14, -2.77599, -3.27117)
bones/0/rotation = Quaternion(0.287494, 1.14177e-07, 3.42719e-08, 0.957783)
bones/1/rotation = Quaternion(-0.136181, 2.85574e-14, -3.24681e-08, 0.990684)
bones/2/rotation = Quaternion(0.249735, 7.54952e-15, 5.95415e-08, 0.968314)
bones/3/rotation = Quaternion(0.52663, 1.31744e-06, 9.4171e-07, 0.850094)
bones/4/rotation = Quaternion(0.0316576, -3.4554e-06, -3.77326e-09, 0.999499)
bones/5/rotation = Quaternion(0.0162965, 0.130537, 0.956905, -0.258896)
bones/6/rotation = Quaternion(0.489795, -0.128166, -0.00289094, 0.862361)
bones/7/rotation = Quaternion(-0.0162968, 0.130536, 0.956905, 0.258897)
bones/8/rotation = Quaternion(0.489796, 0.128165, 0.00289089, 0.86236)
bones/9/rotation = Quaternion(0.969434, 2.92484e-08, 1.15565e-07, -0.245354)
bones/11/rotation = Quaternion(0.150097, 5.77917e-22, -3.33278e-17, 0.988671)
bones/12/rotation = Quaternion(0.0956097, -1.83954e-21, -2.1231e-17, 0.995419)
bones/13/rotation = Quaternion(0.883573, 0.0110256, -0.385411, 0.265773)
bones/14/rotation = Quaternion(0.438242, 3.11144e-08, 9.79574e-08, 0.898857)
bones/15/rotation = Quaternion(0.778573, -0.017801, 0.149987, 0.609107)
bones/16/rotation = Quaternion(0.430563, -8.84402e-09, -1.08561e-07, 0.902561)
bones/17/position = Vector3(1.57988, -6.28817, -3.91978)
bones/17/rotation = Quaternion(-0.67336, 0.215838, 0.215838, 0.67336)
bones/19/position = Vector3(5.7617, -4.44112, 1.04177)
bones/20/rotation = Quaternion(0.900283, 0.435306, 5.84872e-08, 1.97311e-15)
bones/22/rotation = Quaternion(-0.243637, 0.0412374, 0.418203, 0.874098)
bones/24/position = Vector3(-2.42736, -6.28817, -0.241858)
bones/26/position = Vector3(-4.03107, -4.03919, 4.97153)
bones/27/rotation = Quaternion(0.929547, -0.368703, -4.95386e-08, 0)
bones/29/rotation = Quaternion(-0.209691, 0.0262526, -0.735144, 0.64413)

[node name="LeftHandAnchor" type="BoneAttachment3D" parent="Origin/MonsterArmature/Skeleton3D" index="1"]
transform = Transform3D(0.615399, -0.785011, 0.0710124, -0.00978325, -0.0976929, -0.995169, 0.788155, 0.611731, -0.0678, 3.34279, -0.991492, 1.59694)
bone_name = "fingers_l"

[node name="LAttackArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/LeftHandAnchor"]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/LeftHandAnchor/LAttackArea"]
shape = SubResource("8")

[node name="SmashAttackArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/LeftHandAnchor/LAttackArea"]
transform = Transform3D(1, 2.98023e-08, 0, -1.49012e-08, 1, -3.35276e-08, 2.98023e-08, -5.58794e-09, 1, -0.545582, 2.87747, -0.650013)
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/LeftHandAnchor/LAttackArea/SmashAttackArea"]
transform = Transform3D(1, -9.31323e-10, -1.49012e-08, -1.86265e-09, 1, -1.30385e-08, -1.49012e-08, 9.48785e-09, 1, 1.99354, 0.0234688, 0.15885)
shape = SubResource("10")

[node name="RightHandAnchor" type="BoneAttachment3D" parent="Origin/MonsterArmature/Skeleton3D" index="2"]
transform = Transform3D(0.615399, 0.785011, -0.0710124, 0.00978325, -0.0976929, -0.995169, -0.788155, 0.611731, -0.0678, -3.34279, -0.991492, 1.59694)
bone_name = "fingers_r"

[node name="RAttackArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/RightHandAnchor"]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/RightHandAnchor/RAttackArea"]
shape = SubResource("8")

[node name="GrabArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/RightHandAnchor"]
transform = Transform3D(1, 8.9407e-08, 7.45058e-09, 0, 1, -5.58794e-08, -5.58794e-08, -4.09782e-08, 1, 0.316347, 0.840722, -0.324262)
collision_layer = 8
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/RightHandAnchor/GrabArea"]
shape = SubResource("9")

[node name="LeftFootAnchor" type="BoneAttachment3D" parent="Origin/MonsterArmature/Skeleton3D" index="3"]
transform = Transform3D(1, -7.10543e-15, 2.38419e-07, 2.29679e-07, -0.268273, -0.963343, 6.39612e-08, 0.963343, -0.268273, 1.8, -6.28817, -2.23979)
bone_name = "foot_l"

[node name="LStompArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/LeftFootAnchor"]
transform = Transform3D(1, 3.55271e-15, 4.9738e-14, -2.4869e-14, 0.999999, 5.96046e-08, 1.14131e-13, 0, 1, -1.19209e-07, 1.14299, -0.318299)
collision_layer = 4
collision_mask = 0
monitoring = false
monitorable = false

[node name="StompShape" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/LeftFootAnchor/LStompArea"]
shape = SubResource("5")

[node name="RightFootAnchor" type="BoneAttachment3D" parent="Origin/MonsterArmature/Skeleton3D" index="4"]
transform = Transform3D(1, 7.10543e-15, -2.38419e-07, -2.29679e-07, -0.268273, -0.963343, -6.39612e-08, 0.963343, -0.268273, -1.8, -6.28817, -2.23979)
bone_name = "foot_r"

[node name="RStompArea" type="Area3D" parent="Origin/MonsterArmature/Skeleton3D/RightFootAnchor"]
transform = Transform3D(1, 0, -5.32907e-15, 0, 0.999999, 2.98023e-08, 3.19744e-14, 0, 1, -1.19209e-07, 1.14299, -0.318299)
collision_layer = 4
collision_mask = 0
monitoring = false
monitorable = false

[node name="StompShape" type="CollisionShape3D" parent="Origin/MonsterArmature/Skeleton3D/RightFootAnchor/RStompArea"]
shape = SubResource("5")

[node name="AnimationPlayer" parent="Origin" index="1"]
autoplay = "idle-loop"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("6")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
size = 32.0
far = 1000.0

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 15360
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("11")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="StepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="SwingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -10.0

[node name="RoarSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="SmashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
pitch_scale = 0.7

[connection signal="area_entered" from="Hitbox" to="." method="hit"]

[editable path="Origin"]
